# WebGcc

./: .gitignore  CMakeLists.txt  README.md  index.html
Benchmark/CalcKey/Node/: calcKey.cpp  index.js  package-lock.json
Benchmark/SumArray/Node/: index.js  package-lock.json  package.json
Benchmark/SumArray/V8/: favicon.icoZone.Identifier  index.html  sumArray.cpp
Benchmark/SumArray/V8/libs/: benchmark.js  platform.js
Benchmark/outros/: fatorial.cpp  fatorial.js  fibonacci.cpp  fibonacci.js
Docs/: language.bnf  language.ebnf
Src/: ast.cpp  ast.h  checker.cpp  checker.h  error.cpp  error.h  functable.cpp  functable.h  lexer.cpp  lexer.h  parser.cpp  parser.h  parserExpression.cpp  parserMain.cpp  parserStatement.cpp  symtable.cpp  symtable.h  tradutor.cpp
Test/: funcoes.cpp  instrucoes.cpp  operacoes.cpp  print.cpp  repeticoes.cpp  teste1.cpp  vetores.cpp
